--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault.html
@@ -1,59 +1,95 @@
 {% extends 'generic/object.html' %}
 {% load render_table from django_tables2 %}
 {% load i18n %}
+{% load l10n %}
 
 {% block content %}
   <div class="row mb-3">
     <div class="col col-md-6">
       <div class="card">
         <h5 class="card-header">故障详情</h5>
-        <div class="card-body">
           <table class="table table-hover attr-table">
             <tr>
               <th scope="row">故障编号</th>
-              <td>{{ object.fault_number }}</td>
+              <td>{{ object.fault_number|default:"—" }}</td>
             </tr>
             <tr>
               <th scope="row">值守人员</th>
-              <td>{{ object.duty_officer }}</td>
+              <td>{{ object.duty_officer|default:"—" }}</td>
             </tr>
             <tr>
               <th scope="row">中断位置</th>
               <td>
-                {% for site in object.interruption_location.all %}
-                  <a href="{{ site.get_absolute_url }}">{{ site }}</a>{% if not forloop.last %}, {% endif %}
-                {% endfor %}
+                {% if object.interruption_location.all %}
+                  {% for site in object.interruption_location.all %}
+                    <a href="{{ site.get_absolute_url }}">{{ site }}</a>{% if not forloop.last %}, {% endif %}
+                  {% endfor %}
+                {% else %}
+                  —
+                {% endif %}
               </td>
             </tr>
             <tr>
               <th scope="row">故障中断时间</th>
-              <td>{{ object.fault_occurrence_time|date:"Y-m-d H:i:s" }}</td>
+              <td>{{ object.fault_occurrence_time|date:"Y-m-d H:i:s"|default:"—" }}</td>
             </tr>
             <tr>
               <th scope="row">故障恢复时间</th>
-              <td>{{ object.fault_recovery_time|date:"Y-m-d H:i:s"|default:"-" }}</td>
+              <td>{{ object.fault_recovery_time|date:"Y-m-d H:i:s"|default:"—" }}</td>
             </tr>
             <tr>
               <th scope="row">中断历时</th>
-              <td>{{ object.fault_duration|default:"-" }}</td>
+              <td>{{ object.fault_duration|default:"—" }}</td>
             </tr>
             <tr>
               <th scope="row">故障分类</th>
-              <td>{% badge object.get_fault_category_display bg_color=object.get_fault_category_color %}</td>
+              <td>
+                {% if object.fault_category %}
+                  {% badge object.get_fault_category_display bg_color=object.get_fault_category_color %}
+                {% else %}
+                  —
+                {% endif %}
+              </td>
             </tr>
             <tr>
               <th scope="row">中断原因</th>
-              <td>{{ object.get_interruption_reason_display }}</td>
+              <td>{{ object.get_interruption_reason_display|default:"—" }}</td>
             </tr>
             <tr>
               <th scope="row">故障详细情况</th>
-              <td>{{ object.fault_details|linebreaks }}</td>
+              <td>{{ object.fault_details|default:"—" }}</td>
+            </tr>
+            <tr>
+              <th scope="row">GPS坐标</th>
+              <td class="position-relative">
+                {% if object.interruption_longitude and object.interruption_latitude %}
+                  {% if config.MAPS_URL %}
+                    <div class="position-absolute top-50 end-0 me-2 translate-middle-y d-print-none">
+                      <a href="{{ config.MAPS_URL }}{{ object.interruption_latitude|unlocalize }},{{ object.interruption_longitude|unlocalize }}" 
+                         target="_blank" 
+                         class="btn btn-primary btn-sm">
+                        <i class="mdi mdi-map-marker"></i> 地图
+                      </a>
+                    </div>
+                  {% endif %}
+                  <span>{{ object.interruption_latitude }}, {{ object.interruption_longitude }}</span>
+                {% else %}
+                  —
+                {% endif %}
+              </td>
             </tr>
           </table>
-        </div>
       </div>
+      {% include 'inc/panels/custom_fields.html' %}
     </div>
     <div class="col col-md-6">
+      {% include 'inc/panels/tags.html' %}
+      {% include 'inc/panels/comments.html' %}
+    </div>
+  </div>
+  
+  <div class="row mb-3">
+    <div class="col col-md-12">
       <div class="card">
         <h5 class="card-header">
           影响业务
@@ -66,9 +102,7 @@
           </div>
           {% endif %}
         </h5>
-        <div class="card-body">
-            {% render_table impacts_table %}
-        </div>
+          {% render_table impacts_table %}
       </div>
     </div>
   </div>
