增加图像功能

--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault.html
@@ -164,6 +164,8 @@
       </div>
     </div>
     <div class="col col-md-6">
+      <!-- 图像附件 -->
+      {% include 'inc/panels/image_attachments.html' %}
       <!-- 标签和评论 -->
       {% include 'inc/panels/tags.html' %}
       {% include 'inc/panels/comments.html' %}
