--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfaultimpact.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfaultimpact.html
@@ -41,6 +41,7 @@
                     </tr>
                 </table>
         </div>
+        {% include 'inc/panels/image_attachments.html' %}
         {% include 'inc/panels/tags.html' %}
         {% include 'inc/panels/custom_fields.html' %}
         {% include 'inc/panels/comments.html' %}
