--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map.html
@@ -16,7 +16,7 @@
                 </div>
             </h5>
             <div class="card-body p-0">
-                <div id="map" style="height: 800px; width: 100%;"></div>
+                <div id="map" style="height:calc(-178px + 100vh);width: 100%;"></div>
             </div>
         </div>
     </div>
